data/derived/comb/progs/unify/prog7056.ml.out
Characters 397-399:
  | Trip(t,r,s)     -> (eval(t,x,y) /. 30) +. eval(r,x,y) /. eval(s,x,y);;
                                       ^^
Error: This expression has type int but an expression was expected of type
         float
